crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__query_update_set.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: "let value = query { update users { name: ^n } }"
---
alder::syntax

  × I was expecting `set` after this update's table name
   ╭─[/project/src/main.ald:1:34]
 1 │ let value = query { update users { name: ^n } }
   ·                     ┬            ┬
   ·                     │            ╰── expected `set`
   ·                     ╰── this `update` starts here
   ╰────
  help: write `update users set { name: ^name }`
