crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__query_update_table.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: "let value = query { update Users set {} }"
---
alder::syntax

  × I was expecting a table name after `update`
   ╭─[/project/src/main.ald:1:28]
 1 │ let value = query { update Users set {} }
   ·                     ┬      ┬
   ·                     │      ╰── expected a non-reserved lower-case table name
   ·                     ╰── this `update` starts here
   ╰────
