crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__query_update_where.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: "let value = query { update users set {} where }"
---
alder::syntax

  × I was expecting a condition after this update's `where`
   ╭─[/project/src/main.ald:1:47]
 1 │ let value = query { update users set {} where }
   ·                     ┬                         ┬
   ·                     │                         ╰── expected an expression
   ·                     ╰── this `update` starts here
   ╰────
