crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__query_where.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: "let value = query { select * from users where }"
---
alder::syntax

  × I was expecting a condition after `where`
   ╭─[/project/src/main.ald:1:47]
 1 │ let value = query { select * from users where }
   ·                     ┬                         ┬
   ·                     │                         ╰── expected an expression
   ·                     ╰── this `select` starts here
   ╰────
