crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__schema_item.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: "schema User { 42 }"
---
alder::syntax

  × I was expecting a field, `pick`, or the end of this schema
   ╭─[/project/src/main.ald:1:15]
 1 │ schema User { 42 }
   · ┬             ┬
   · │             ╰── expected a lower-case field name, `pick`, or `}`
   · ╰── this schema declaration starts here
   ╰────
  help: write a field like `name: String`, or select fields with `pick name,
        email`
