crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__schema_name.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: "schema lower {}"
---
alder::syntax

  × I was expecting an upper-case schema name
   ╭─[/project/src/main.ald:1:8]
 1 │ schema lower {}
   · ┬      ┬
   · │      ╰── expected a name after `schema`
   · ╰── this schema declaration starts here
   ╰────
  help: write a declaration like `schema User { name: String }`
