crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__schema_open.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: "schema User ["
---
alder::syntax

  × I was expecting `{` to start this schema body
   ╭─[/project/src/main.ald:1:13]
 1 │ schema User [
   · ┬           ┬
   · │           ╰── expected `{`
   · ╰── this schema declaration starts here
   ╰────
